--- a/210042111_Lab01/210042111_Lab01.csproj
+++ b/210042111_Lab01/210042111_Lab01.csproj
@@ -44,9 +44,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Admin.cs" />
+    <Compile Include="CreditCard.cs" />
+    <Compile Include="DigitalWallet.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="NotificationService.cs" />
-    <Compile Include="PaymentMethod.cs" />
+    <Compile Include="IPaymentMethod.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rider.cs" />
