--- a/210042111_Lab01/210042111_Lab01.csproj
+++ b/210042111_Lab01/210042111_Lab01.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rider.cs" />
     <Compile Include="RideType.cs" />
+    <Compile Include="SetPayment.cs" />
     <Compile Include="Trip.cs" />
   </ItemGroup>
   <ItemGroup>
